src/test/ui/parser/issue-14303-struct.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-14303-struct.rs:1:17
   |
LL | struct X<'a, T, 'b> {
   |         --------^^- help: reorder the parameters: `<'a, 'b, T>`
   |
   = note: the expected order for parameters is: lifetimes, then types, then consts

error: aborting due to previous error

